# journies-auth

./: .gitignore  README.md
auth_service/: .dockerignore  .env.example  .gitignore  Auth_Service_API.postman_collection.json  Dockerfile  README.md  database_permissions.sql  docker-compose.prod.yml  docker-compose.yml  manage.py  msbc_rbac_integration_template.md  pyproject.toml  rbac_testing_guide.md  requirements.txt  test_api.py  test_errors.txt  test_results.txt  test_update.py
auth_service/auth_app/: admin.py  apps.py  signals.py  urls.py  utils.py  views.py
auth_service/auth_app/migrations/: 0001_initial.py  0002_usermodel_date_joined_and_more.py  0003_tokenblacklist.py  0004_add_unique_phone_number.py  0005_nullable_tenant_fields.py  0006_usermodel_terms_accepted.py  0007_alter_usermodel_first_name_and_more.py  0008_remove_tenant_plan_usermodel_is_onboarding_complete_and_more.py  0009_usermodel_compass_fields.py  0009_usermodel_role_id.py  0010_alter_usermodel_email_alter_usermodel_first_name_and_more.py  0011_usermodel_department_id.py  0012_usermodel_username.py  0013_remove_auditlog_user_id_auditlog_user_tenant_deleted_and_more.py  0014_alter_auditlog_user_alter_usermodel_username.py
auth_service/auth_app/models/: __init__.py  department_model.py  entity1_model.py  entity2_model.py  property_model.py  role_model.py  user_model.py
auth_service/auth_service/: constants.py  db_router.py  health_check.py  jwks_view.py  logger.py  settings.py  urls.py
auth_service/auth_service/middleware/: __init__.py  cache_control.py  jwt_auth.py  rate_limiting.py  (+1 more)
(+18 files in other folders)
